[package]
name = "e2store"
keywords = ["ethereum", "portal-network", "e2store", "era", "era1"]
description = "E2store, era, and era1 implementations for Ethereum"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.2.3"

[dependencies]
alloy = { workspace = true, features = ["rlp", "consensus"] }
alloy-rlp.workspace = true
anyhow.workspace = true
clap = { workspace = true, optional = true }
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
ethportal-api.workspace = true
rand.workspace = true
reqwest.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
scraper.workspace = true
snap.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio.workspace = true
trin-utils.workspace = true

[features]
e2ss-stats-binary = ["clap", "tracing", "tracing-subscriber"]

[[bin]]
name = "e2ss-stats"
required-features = ["e2ss-stats-binary"]
