[package]
name = "ethereum-rpc-client"
description = "Ethereum RPC client for consensus and execution APIs."
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-middleware = "0.2"
reqwest-retry = "0.2"
tracing = "0.1"
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
alloy = { workspace = true }
alloy-hardforks = { workspace = true }
ethportal-api = { path = "../ethportal-api" }
trin-validation = { path = "../validation" }
