[package]
name = "ethereum-rpc-client"
description = "Ethereum RPC client for consensus and execution APIs."
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
alloy-hardforks.workspace = true
anyhow.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
ethportal-api.workspace = true
reqwest.workspace = true
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
