[package]
name = "ethportal-api"
version = "0.11.0"
description = "Definitions for various Ethereum Portal Network JSONRPC APIs"
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
alloy = { workspace = true, features = ["consensus", "eips", "k256", "rlp", "rpc-types-eth", "serde"] }
alloy-chains.workspace = true
alloy-hardforks.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types-eth = { version = "1.0", default-features = false, features = ["serde"] }
anyhow.workspace = true
base64 = "0.22"
bimap = "0.6.3"
bytes.workspace = true
c-kzg = "2.1.0"
discv5.workspace = true
eth_trie.workspace = true
ethereum_hashing.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
hex.workspace = true
itertools.workspace = true
jsonrpsee = { workspace = true, features = ["async-client", "client", "macros", "server"]}
keccak-hash.workspace = true
lazy_static.workspace = true
once_cell = "1.17"
parking_lot.workspace = true
quickcheck.workspace = true
rand.workspace = true
rayon.workspace = true
rs_merkle = "1.4.2"
secp256k1 = { version = "0.31", features = ["global-context", "recovery", "rand"] }
serde = { workspace = true, features = ["rc"] }
serde-this-or-that.workspace = true
serde_json.workspace = true
sha2 = "0.10.1"
sha3.workspace = true
ssz_types.workspace = true
superstruct = "0.7"
thiserror.workspace = true
tokio.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
env_logger.workspace = true
quickcheck.workspace = true
rstest.workspace = true
serde_yaml.workspace = true
snap.workspace = true
test-log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
vergen = { version = "9.0", features = ["build", "cargo", "emit_and_set", "rustc"] }
vergen-git2 = "1.0"
