[package]
name = "trin-evm"
keywords = ["ethereum", "execution-layer"]
description = "Common EVM functionality"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy.workspace = true
ethportal-api.workspace = true
revm.workspace = true
revm-primitives.workspace = true
tokio.workspace = true
